--- a/src/app/features/movie-details/movie-details.html
+++ b/src/app/features/movie-details/movie-details.html
@@ -12,7 +12,7 @@
         {{ m.title }} <span class="year">({{ year }})</span>
       </h1>
       <div class="rating">⭐ {{ rating }}</div>
-      <p class="overview">{{ m.overview }}</p>
+      <p class="overview">{{ m.synopsis }}</p>
       <button
         class="btn-watchlist"
         [class.in-watchlist]="isInWatchlist"
