Fix: Update backdrop image source in MovieDetails component to use posterPath instead of backdropPath; mark TmdbImagePipe as standalone for improved modularity.

--- a/src/app/features/movie-details/movie-details.html
+++ b/src/app/features/movie-details/movie-details.html
@@ -10,7 +10,7 @@
     <!-- Backdrop using pipe -->
     <div 
       class="backdrop" 
-      [style.background-image]="'url(' + (m.backdropPath | tmdbImage:'w1280') + ')'"
+      [style.background-image]="'url(' + (m.posterPath | tmdbImage:'w1280') + ')'"
     ></div>
 
     <div class="content">
