Refactor: Remove commented-out code in Home component and enhance MovieDetails component with new backdrop image styles and template updates for improved visual presentation.

--- a/src/app/features/movie-details/movie-details.html
+++ b/src/app/features/movie-details/movie-details.html
@@ -1,10 +1,12 @@
 @if (movie(); as m) {
   <div class="details-page">
     <!-- Backdrop using pipe -->
-    <div 
-      class="backdrop" 
-      [style.background-image]="'url(' + (m.posterPath | tmdbImage:'w1280') + ')'"
-    ></div>
+    <img 
+      appImageLoader
+      [src]="m.posterPath | tmdbImage:'w1280'" 
+      alt=""
+      class="backdrop-img"
+    />
 
     <div class="content">
       <!-- Poster using pipe -->
