--- a/src/app/features/watchlist/watchlist.html
+++ b/src/app/features/watchlist/watchlist.html
@@ -4,7 +4,7 @@
     @if (watchlistService.watchlist().length > 0) {
       <div class="movie-grid">
         @for (movie of watchlistService.watchlist(); track movie.id) {
-          <app-movie-card [movie]="movie" />
+          <app-movie-card [movie]="movie" (cardClick)="onMovieClick($event)" />
         }
       </div>
     } @else {
