--- a/src/app/features/search/search.html
+++ b/src/app/features/search/search.html
@@ -1,26 +1,52 @@
 <div class="search-page">
-    <div class="search-header">
-      <h1>Search Movies</h1>
-      <input 
-        type="text" 
-        [formControl]="searchControl" 
-        placeholder="Search for movies..."
-        class="search-input"
-        autofocus
-      />
-    </div>
-  
-    @if (loading()) {
-      <div class="loading">Searching...</div>
-    } @else if (results().length > 0) {
-      <div class="movie-grid">
-        @for (movie of results(); track movie.id) {
-          <app-movie-card [movie]="movie" (cardClick)="onMovieClick($event)"  />
+  <div class="search-header">
+    <h1>Search Movies</h1>
+    <input type="text" [formControl]="searchControl" placeholder="Search for movies..." class="search-input"
+      autofocus />
+  </div>
+
+
+  <form action="submit" [formGroup]="form()">
+    <div class="search-filters">
+      <select class="search-filter" name="genres" id="genres" formControlName="genre">
+        <option value="" disabled hidden>Select Genre</option>
+        @for(genre of genres; track genre){
+        <option value="genre"  [value]="genre">{{genre}}</option>
         }
-      </div>
-    } @else if (searched() && results().length === 0) {
-      <div class="no-results">No movies found</div>
-    } @else {
-      <div class="hint">Start typing to search for movies</div>
+      </select>
+      <select class="search-filter" name="year" id="year" formControlName="year">
+        <option value="" disabled hidden>Select Year</option>
+        @for(year of years; track year){
+        <option value="year" [value]="year">{{year}}</option>
+        }
+      </select>
+      <select class="search-filter" name="rating" id="rating" formControlName="rating">
+        <option value="" disabled hidden>Select Rating</option>
+        @for(rating of ratings; track rating){
+        <option value="rating"  [value]="rating">{{rating}}</option>
+        }
+      </select>
+      <select class="search-filter" name="sorting-options" id="sorting-options" formControlName="sort">
+        <option value="" disabled hidden>Select Sort</option>
+        @for(option of sortOptions; track option){
+        <option value="option" [value]="option">{{option}}</option>
+        }
+      </select>
+      <button class="submit-btn">Submit</button>
+    </div>
+  </form>
+
+  @if (loading()) {
+  <div class="loading">Searching...</div>
+  } @else if (results().length > 0) {
+  <div class="movie-grid">
+    @for (movie of results(); track movie.id) {
+    <app-movie-card [movie]="movie" (cardClick)="onMovieClick($event)" />
     }
   </div>
+  } @else if (searched() && results().length === 0) {
+  <div class="no-results">No movies found</div>
+  } @else {
+  <div class="hint">Start typing to search for movies</div>
+  }
+</div>
