Refactor: Enhance search form by adding multiple genre selection options and improving select component styles for better layout and usability.

--- a/src/app/features/search/search.html
+++ b/src/app/features/search/search.html
@@ -11,6 +11,15 @@
       <app-select formControlName="genre" [options]="genres" placeholder="Select Genre"
         (changed)="onGenreChange($event)">
       </app-select>
+      <app-select formControlName="genre" [options]="genres" placeholder="Select Genre"
+        (changed)="onGenreChange($event)">
+      </app-select>
+      <app-select formControlName="genre" [options]="genres" placeholder="Select Genre"
+        (changed)="onGenreChange($event)">
+      </app-select>
+      <app-select formControlName="genre" [options]="genres" placeholder="Select Genre"
+        (changed)="onGenreChange($event)">
+      </app-select>
       <button class="submit-btn btn-primary">Submit</button>
     </div>
   </form>
